<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:text="@string/select_intro"
    android:gravity="center"
    android:textSize="20sp"
	android:fontFamily="sans-serif-condensed" />
    
    <Gallery
    android:id="@+id/gallery"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />
    
    <TextView android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="5dp"
    android:text="@string/show_intro" 
    android:textSize="20sp"
	android:fontFamily="sans-serif-condensed" />
    
    <ImageView
    android:id="@+id/picture"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:contentDescription="@string/picture" />
    
</LinearLayout>
